Make it compile on Java 8.