@@ -1,19 +1,20 @@
 /*
- * @(#)StringTrieTest.java
+ * @(#)CharTrieTest.java
  * Copyright © 2024 Werner Randelshofer, Switzerland. MIT License.
  */
 package ch.randelshofer.fastdoubleparser;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Set;
+import java.util.Arrays;
+import java.util.HashSet;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-public class StringTrieTest {
+public class CharTrieTest {
     @Test
     public void shouldAddAndRetrieve() {
-        StringTrie trie = new StringTrie(Set.of("e", "E", "Exp"));
+        CharTrie trie = new CharTrie(new HashSet<>(Arrays.asList("e", "E", "Exp")));
         assertEquals(0, trie.match("a"));
         assertEquals(1, trie.match("e"));
         assertEquals(1, trie.match("E"));
